--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="!admissions.length" class="spinner-wrapper" flex>
+    <mat-spinner></mat-spinner>
+</div>
+
 <div class="jumbotron">
   <h1 class="display-3">Prijímacie konanie</h1>
   <p class="lead">Všeobecný prehľad</p>
@@ -228,5 +232,3 @@
 
   </div>
 </div>
-
-
