--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.scss
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.scss
@@ -24,3 +24,15 @@ h2 {
   }
 }
 
+.spinner-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 11111;
+
+  justify-content: center;
+  align-items: center;
+}
