--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -133,19 +133,23 @@
       ></app-statistics-table>
     </div>
   </div>
-
-
-
 </div>
 
-<div class="row" margin-top>
-  <div class="col-lg-6">
-    <app-chart
-      [title]="'Počet prihlášok na jednotlivé študijné programy'"
-      [data]="[this.admissionsData.info.length, this.admissionsData.info4.length, this.admissionsData.pkss.length, this.admissionsData.pkss4.length, this.admissionsData.ib.length]"
-      [labels]="['INFO', 'INFO4', 'IT', 'IT4', 'IB']"
-      [type]="'bar'"
-      [legend]="false"
-    ></app-chart>
-  </div>
+<div class="schoolsQualityBar">
+  <table mat-table matSort [dataSource]="schools" full-width>
+    <ng-container [matColumnDef]="column" *ngFor="let column of displayedSchoolsColumns">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
+      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="Akcie" stickyEnd>
+      <th mat-header-cell *matHeaderCellDef> Akcie </th>
+      <td mat-cell *matCellDef="let element">
+        <button class="btn btn-primary" [routerLink]="[element.id]" no-margin>Detail</button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedSchoolsColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedSchoolsColumns;"></tr>
+  </table>
 </div>
