Vytvorenie login page

--- a/bakalarka-frontend/src/app/login/login.component.html
+++ b/bakalarka-frontend/src/app/login/login.component.html
@@ -1,9 +1,15 @@
-<form (ngSubmit)="submitForm()">
+<div *ngIf="!authService.loggedIn">
+
+  <form (ngSubmit)="submitForm()">
     <mat-form-field>
       <input matInput type="text" name="email" placeholder="AIS e-mail" [(ngModel)]="_email">
     </mat-form-field>
     <mat-form-field>
       <input matInput type="password" name="password" placeholder="Heslo" [(ngModel)]="_password">
     </mat-form-field>
-  <button [disabled]="!(_email && _password)" mat-raised-button>Prihlásiť</button>
-</form>
+    <button type="submit" [disabled]="!(_email && _password)" mat-raised-button>
+      Prihlásiť
+    </button>
+  </form>
+
+</div>
