--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -1,6 +1,9 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<div *ngIf="authService.loggedIn">
+
+  <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -13,36 +16,40 @@
         <a class="nav-link" routerLink="/import">Import</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Prijímacie konanie
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/admissions">Všeobecné</a>
-          <a class="dropdown-item" routerLink="/admissions/comparison">Porovnanie školských rokov</a>
-
-          <div class="dropdown-divider"></div>
-
-          <a class="dropdown-item" routerLink="/admissions/bachelor">Bakalársky stupeň</a>
-          <a class="dropdown-item" routerLink="/admissions/master">Inžiniersky stupeň</a>
-        </div>
-      </li>
-
-      <li *ngIf="!authService.loggedIn" class="nav-item">
-        <a class="nav-link" routerLink="/login">Prihlasenie</a>
-      </li>
-      <li *ngIf="authService.loggedIn" class="nav-item">
-        <a class="nav-link" (click)="logoutUser()">Odhlasenie</a>
-      </li>
-    </ul>
-
-    <form class="form-inline my-2 my-lg-0">
-      <select [(ngModel)]="selectedYear" class="custom-select" name="year" (change)="onYearSelect()">
-        <option value="all">Všetko</option>
-        <option value="2015-2016">2015/2016</option>
-        <option value="2016-2017">2016/2017</option>
-        <option value="2017-2018">2017/2018</option>
-        <option value="2018-2019">2018/2019</option>
-      </select>
-    </form>
-  </div>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        Prijímacie konanie
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" routerLink="/admissions">Všeobecné</a>
+        <a class="dropdown-item" routerLink="/admissions/comparison">Porovnanie školských rokov</a>
+        
+        <div class="dropdown-divider"></div>
+        
+        <a class="dropdown-item" routerLink="/admissions/bachelor">Bakalársky stupeň</a>
+        <a class="dropdown-item" routerLink="/admissions/master">Inžiniersky stupeň</a>
+      </div>
+    </li>
+    
+    <!-- <li *ngIf="!authService.loggedIn" class="nav-item">
+      <a class="nav-link" routerLink="/login">Prihlasenie</a>
+    </li> -->
+    <!-- *ngIf="authService.loggedIn" -->
+    <li class="nav-item">
+      <a class="nav-link" (click)="logoutUser()">Odhlasenie</a>
+    </li>
+  </ul>
+  
+  <form class="form-inline my-2 my-lg-0">
+    <select [(ngModel)]="selectedYear" class="custom-select" name="year" (change)="onYearSelect()">
+      <option value="all">Všetko</option>
+      <option value="2015-2016">2015/2016</option>
+      <option value="2016-2017">2016/2017</option>
+      <option value="2017-2018">2017/2018</option>
+      <option value="2018-2019">2018/2019</option>
+    </select>
+  </form>
+</div>
 </nav>
+
+</div>
