--- a/bakalarka-frontend/src/app/core/sidenav/sidenav.component.html
+++ b/bakalarka-frontend/src/app/core/sidenav/sidenav.component.html
@@ -1,9 +1,13 @@
-<nav class="d-none d-md-block bg-light sidebar">
-  <div class="sidebar-sticky">
-    <ul class="nav flex-column">
-      <li class="nav-item">
-      </li>
+<div *ngIf="loggedIn">
 
-    </ul>
-  </div>
-</nav>
+  <nav class="d-none d-md-block bg-light sidebar">
+    <div class="sidebar-sticky">
+      <ul class="nav flex-column">
+        <li class="nav-item">
+        </li>
+        
+      </ul>
+    </div>
+  </nav>
+  
+</div>
