statistics table - sorting of user befor calculating

--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -127,10 +127,11 @@
       >
       <app-statistics-table
         *ngIf="admissions"
+        [numberOfGroups]="numberOfGroups"
         [data]="filteredAdmissions"
-        [type]="'intervals'"
-        [intervalsUpperLimits]="decibels"
+        [type]="'groups'"
       ></app-statistics-table>
+
     </div>
   </div>
 </div>
