--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -17,6 +17,7 @@
           <mat-radio-button value="Attendance">Dochádzka</mat-radio-button>
           <mat-radio-button value="Grades">Študijné výsledky</mat-radio-button>
           <mat-radio-button value="Admissions">Prijímačky</mat-radio-button>
+          <mat-radio-button value="AdmissionsPoints">Prijímačky - body</mat-radio-button>
           <mat-radio-button value="StateExamsOverviews">Štátnice - prehľad</mat-radio-button>
           <mat-radio-button value="StateExamsScenarios">Štátnice - scenáre</mat-radio-button>
         </mat-radio-group>
