--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -83,49 +83,45 @@
 </table>
 <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons #paginator></mat-paginator>
 
+<!--
+  ŠTATISTIKY
+-->
+
 <h2 padding>Štatistiky</h2>
 
-<app-time-chart
-  *ngIf="admissionsTimes.length"
-  [title]="'Dátumy zadávania jednotlivých prihlášok'"
-  [data]="admissionsTimes"
-  [labels]="['INFO', 'INFO4', 'IT', 'IT4']"
-  [type]="'line'"
-  [legend]="false"
-></app-time-chart>
-
-<app-time-chart
-  *ngIf="admissionsTimes.length"
-  [title]="'Počet prihlášok za konkrétne dni'"
-  [data]="admissionsPerDay"
-  [labels]="['INFO', 'INFO4', 'IT', 'IT4']"
-  [type]="'line'"
-  [legend]="false"
-></app-time-chart>
+<div class="row">
+  <div class="col-lg-6 col-sm-6">
+      <app-time-chart
+      *ngIf="admissionsTimes.length"
+      [title]="'Dátumy zadávania jednotlivých prihlášok'"
+      [data]="admissionsTimes"
+      [type]="'line'"
+      [legend]="false"
+    ></app-time-chart>
+  </div>
+  <div class="col-lg-6 col-sm-6">
+      <app-time-chart
+      *ngIf="admissionsPerDay.length"
+      [title]="'Počet prihlášok za konkrétne dni'"
+      [data]="admissionsPerDay"
+      [type]="'line'"
+      [legend]="false"
+    ></app-time-chart>
+  </div>
+</div>
 
 <div class="groups" margin-top>
-
-  <label for="graduationYear" margin-top>Rok maturity</label>
+  <label for="numberOfGroups">Počet skupín</label>
   <input
-    [(ngModel)]="graduationYear"
+    id="numberOfGroups"
+    [(ngModel)]="numberOfGroups"
     class="form-control"
     type="number"
     name="numberOfGroups"
-    min="0"
-    (change)="filterByGraduationYear()"
+    min="1"
   >
-
   <div class="row" padding-top>
-    <div class="col-lg-6">
-      <label for="numberOfGroups">Počet skupín</label>
-      <input
-        id="numberOfGroups"
-        [(ngModel)]="numberOfGroups"
-        class="form-control"
-        type="number"
-        name="numberOfGroups"
-        min="1"
-      >
+    <div class="col-lg-6 col-md-12">
       <app-statistics-table
         *ngIf="admissions"
         [numberOfGroups]="numberOfGroups"
@@ -134,25 +130,20 @@
       ></app-statistics-table>
     </div>
 
-    <div class="col-lg-6">
-      <label for="decibels">Horné ohraničenia intervalov</label>
-      <input
-        id="decibels"
-        class="form-control"
-        type="text"
-        name="decibels"
-        (change)="onDecibelsChange($event)"
-      >
+    <div class="col-lg-6 col-md-12">
       <app-statistics-table
         *ngIf="admissions"
         [numberOfGroups]="numberOfGroups"
         [data]="filteredAdmissions"
         [type]="'groups'"
       ></app-statistics-table>
-
     </div>
   </div>
 </div>
+
+<!--
+  REBRÍČEK ŠKÔL
+-->
 
 <h2 padding>Rebríček škôl</h2>
 
@@ -161,13 +152,6 @@
     <ng-container [matColumnDef]="column" *ngFor="let column of displayedSchoolsColumns">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
       <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="Akcie" stickyEnd>
-      <th mat-header-cell *matHeaderCellDef> Akcie </th>
-      <td mat-cell *matCellDef="let element">
-        <button class="btn btn-primary" [routerLink]="[element.id]" no-margin>Detail</button>
-      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedSchoolsColumns"></tr>
