zakomentovanie redis, vytvorenie shared module

--- a/bakalarka-frontend/src/app/pages/import/import.component.html
+++ b/bakalarka-frontend/src/app/pages/import/import.component.html
@@ -49,7 +49,7 @@
       <input matInput placeholder="Školský rok" [(ngModel)]="schoolYear">
     </mat-form-field>
 
-    <div
+    <!-- <div
       *ngIf="importedYears[selectedSource][selectedImport] && importedYears[selectedSource][selectedImport].length"
       class="alert alert-warning"
       role="alert"
@@ -60,7 +60,7 @@
       </ul>
       <hr>
       <p class="mb-0">Opätovným importovaním s daným obdobím vzniká riziko, že si prepíšete existujúce dáta.</p>
-    </div>
+    </div> -->
     <mat-divider></mat-divider>
   </ng-template>
 
