--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -37,7 +37,8 @@
           <a class="nav-link" (click)="logoutUser()">Odhlásenie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/account">
+          <a class="nav-link" routerLink="/accounts">
+            <!-- TODO -->
             <!-- <i class="fas fa-lock"></i> -->
             <i class="fas fa-unlock-alt"></i>
           </a>
