pridanie dokumentačných komentárov k export funkciám, exportovanie filtrovaných a všetkých dát, funkcia na exportovanie pola objektov do excelu, stĺpec nastúpený v porovnaní rokov grafe

--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -5,8 +5,20 @@
   <button
     class="btn btn-primary"
     type="button"
+    (click)="exportVisible()"
+  >Exportovať viditeľné údaje</button>
+
+  <button
+    class="btn btn-primary"
+    type="button"
     (click)="exportAll()"
-  >Exportovať údaje</button>
+  >Exportovať všetky údaje</button>
+
+  <button
+    class="btn btn-primary"
+    type="button"
+    (click)="exportFiltered()"
+  >Exportovať vyfiltrované údaje</button>
 </div>
 
 <div>
