--- a/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
@@ -17,7 +17,7 @@
   [title]="'Počet prijatých/neprijatých uchádzačov za školské roky'"
   [data]="admCountsPerYear"
   [labels]="['2015-2016', '2016-2017', '2017-2018', '2018-2019']"
-  [groupLabels]="['Neprijatý', 'Prijatý']"
+  [groupLabels]="['Neprijatý', 'Prijatý', 'Nastúpený']"
   [type]="'bar'"
   [legend]="true"
   [group]="true"
