--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -103,8 +103,8 @@
   <div class="col-lg-6">
     <app-chart
       [title]="'Počet prihlášok na jednotlivé stupne'"
-      [data]="[657, 234, 54]"
-      [labels]="['Bakalársky stupeň', 'Inžiniersky stupeň', 'Doktorandský stupeň']"
+      [data]="[admissionCounts.bachelor, admissionCounts.master]"
+      [labels]="['Bakalársky stupeň', 'Inžiniersky stupeň']"
       [type]="'doughnut'"
       [legend]="false"
     ></app-chart>
@@ -112,7 +112,7 @@
   <div class="col-lg-6">
     <app-chart
       [title]="'Znázornenie pomeru prihlásených, prijatých a neprijatých študentov celkovo na škole'"
-      [data]="[1475, 1043, 432]"
+      [data]="[filteredAdmissions.length, admissionCounts.approved, admissionCounts.rejected]"
       [labels]="['Prihlásený', 'Prijatý', 'Neprijatý']"
       [type]="'bar'"
       [legend]="false"
