--- a/bakalarka-frontend/src/app/core/sidenav/sidenav.component.scss
+++ b/bakalarka-frontend/src/app/core/sidenav/sidenav.component.scss
@@ -5,19 +5,25 @@
     bottom: 0;
     left: 0;
     z-index: 100;
-    padding: 0;
+    padding: 5px;
     box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
     font-size: .875rem;
-}
 
-.sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 48px;
-    height: calc(100vh - 48px);
-    padding-top: .5rem;
-    overflow-x: hidden;
-    overflow-y: auto;
+    .sidebar-sticky {
+      position: -webkit-sticky;
+      position: sticky;
+      top: 48px;
+      height: calc(100vh - 48px);
+      padding-top: .5rem;
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
+
+    .heading {
+      display: block;
+      font-size: 18px;
+      margin-bottom: 10px;
+    }
 }
 
 .sidebar .nav-link.active {
@@ -27,4 +33,12 @@
 .sidebar .nav-link {
     font-weight: 500;
     color: #333;
+}
+
+.heading-2 {
+  margin-left: 10px;
+}
+
+.heading-3 {
+  margin-left: 20px;
 }
