--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -98,7 +98,7 @@
 
 </div>
 
-<h2 class="display-4" padding>Všeobecné informácie</h2>
+<h2 id="general-info" class="display-4" padding>Všeobecné informácie</h2>
 <div class="row">
   <div class="col-lg-6">
     <app-chart
@@ -120,7 +120,7 @@
   </div>
 </div>
 
-<h2 class="display-4" padding>Prehľad škôl v krajine</h2>
+<h2 id="schools-overview" class="display-4" padding>Prehľad škôl v krajine</h2>
 
 <div class="schoolMap">
 
@@ -236,7 +236,7 @@
 
 </div>
 
-<h2 class="display-4" padding>Pôvod študentov</h2>
+<h2 id="origin" class="display-4" padding>Pôvod študentov</h2>
 <app-map
   [markers]="filteredAdmissions"
   [height]="500"
@@ -244,7 +244,7 @@
   [showMarkers]="false"
 ></app-map>
 
-<h2 class="display-4" padding>Regióny</h2>
+<h2 id="regions" class="display-4" padding>Regióny</h2>
 
 <div class="row">
   <div class="col-lg-5">
