--- a/bakalarka-frontend/src/app/core/header/header.component.html
+++ b/bakalarka-frontend/src/app/core/header/header.component.html
@@ -36,10 +36,8 @@
         <li class="nav-item">
           <a class="nav-link" (click)="logoutUser()">Odhlásenie</a>
         </li>
-        <li class="nav-item">
+        <li *ngIf="this.authService.isAdmin" class="nav-item">
           <a class="nav-link" routerLink="/accounts">
-            <!-- TODO -->
-            <!-- <i class="fas fa-lock"></i> -->
             <i class="fas fa-unlock-alt"></i>
           </a>
         </li>
