--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -99,7 +99,7 @@
   ŠTATISTIKY
 -->
 
-<h2 padding>Štatistiky</h2>
+<h2 id="statistics" padding>Štatistiky</h2>
 
 <div class="row">
   <div class="col-lg-6 col-sm-6">
@@ -157,7 +157,7 @@
   REBRÍČEK ŠKÔL
 -->
 
-<h2 padding>Rebríček škôl</h2>
+<h2 id="schools-leaderboard" padding>Rebríček škôl</h2>
 
 <div class="schoolsQualityBar">
   <table mat-table matSort [dataSource]="schools" full-width>
