--- a/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
@@ -17,7 +17,7 @@
   [secondYAxisType]="'line'"
 ></app-chart>
 
-<h2 padding>Pomery nastúpených a prijatých študentov</h2>
+<h2 id="ratios" padding>Pomery nastúpených a prijatých študentov</h2>
 
 <table class="table">
   <thead>
@@ -38,8 +38,7 @@
   </tbody>
 </table>
 
-
-<h2 padding>Počty prihlášok na jednotlivé študijné programy za jednotlivé roky (Bakalársky stupeň)</h2>
+<h2 id="counts-per-year" padding>Počty prihlášok na jednotlivé študijné programy za jednotlivé roky (Bakalársky stupeň)</h2>
 
 <table class="table">
   <thead>
