--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.html
@@ -207,9 +207,16 @@
 
   <div *ngIf="chosenSchool && chosenSchool.admissions.data.length" margin-top>
     <table mat-table matSort [dataSource]="chosenSchool.admissions" full-width>
-      <ng-container [matColumnDef]="column" *ngFor="let column of ['id', 'Meno', 'Priezvisko', 'E_mail']">
+      <ng-container [matColumnDef]="column" *ngFor="let column of displayedAdmissionsColumns">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
         <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Rozh" stickyEnd>
+        <th mat-header-cell *matHeaderCellDef> Rozhodnutie o prijatí </th>
+        <td [ngStyle]="{ color: element.Rozh > 9 && element.Rozh < 20 ? 'green' : 'red' }" mat-cell *matCellDef="let element">
+          {{ isAccepted(element.Rozh) }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="Akcie" stickyEnd>
