--- a/bakalarka-frontend/src/styles.scss
+++ b/bakalarka-frontend/src/styles.scss
@@ -25,12 +25,24 @@ body {
     display: flex;
 }
 
+[flex-column] {
+  flex-direction: column;
+}
+
 [flex-wrap] {
   flex-wrap: wrap;
 }
 
 [justify-content-between] {
     justify-content: space-between;
+}
+
+[justify-content-center] {
+  justify-content: center;
+}
+
+[align-items-center] {
+  align-items: center;
 }
 
 [full-width] {
