--- a/bakalarka-frontend/src/app/core/sidenav/sidenav.component.scss
+++ b/bakalarka-frontend/src/app/core/sidenav/sidenav.component.scss
@@ -10,8 +10,7 @@
     font-size: .875rem;
 
     .sidebar-sticky {
-      position: -webkit-sticky;
-      position: sticky;
+      position: relative;
       top: 48px;
       height: calc(100vh - 48px);
       padding-top: .5rem;
@@ -24,21 +23,26 @@
       font-size: 18px;
       margin-bottom: 10px;
     }
+
+    .heading-2 {
+      margin-left: 10px;
+    }
+
+    .heading-3 {
+      margin-left: 20px;
+    }
+
+    .heading-4 {
+      margin-left: 30px;
+    }
+
+    .nav-link.active {
+      color: #007bff;
+    }
+
+    .nav-link {
+      font-weight: 500;
+      color: #333;
+    }
 }
 
-.sidebar .nav-link.active {
-    color: #007bff;
-}
-
-.sidebar .nav-link {
-    font-weight: 500;
-    color: #333;
-}
-
-.heading-2 {
-  margin-left: 10px;
-}
-
-.heading-3 {
-  margin-left: 20px;
-}
