--- a/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-bachelor/admissions-bachelor.component.html
@@ -77,7 +77,7 @@
 
 </div>
 
-<table mat-table matSort [dataSource]="admissions" full-width>
+<table mat-table #admSort="matSort" matSort [dataSource]="admissions" full-width>
   <ng-container [matColumnDef]="column" *ngFor="let column of displayedAdmissionsColumns">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
     <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
@@ -160,7 +160,7 @@
 <h2 id="schools-leaderboard" padding>Rebríček škôl</h2>
 
 <div class="schoolsQualityBar">
-  <table mat-table matSort [dataSource]="schools" full-width>
+  <table mat-table #schoolsSort="matSort" matSort [dataSource]="schools" full-width>
     <ng-container [matColumnDef]="column" *ngFor="let column of displayedSchoolsColumns">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> {{column}} </th>
       <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
