--- a/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions-comparison/admissions-comparison.component.html
@@ -15,6 +15,7 @@
   [secondYAxis]="true"
   [secondYAxisData]="admRatiosPerYearArr"
   [secondYAxisType]="'line'"
+  [secondYAxisDataLabel]="'Pomery'"
 ></app-chart>
 
 <h2 id="ratios" padding>Pomery nastúpených a prijatých študentov</h2>
