--- a/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
+++ b/bakalarka-frontend/src/app/pages/admissions/admission/admission.component.html
@@ -75,8 +75,7 @@
   </div>
 </div>
 
-<h1 class="display-4">Stredná škola</h1>
-<hr>
+<h2 id="high-school" padding>Stredná škola</h2>
 
 <div class="row">
   <div class="col-lg-6">
@@ -120,7 +119,7 @@
       </tbody>
     </table>
 
-    <app-map [markers]="[school]" [height]="400"></app-map>
+    <app-map [markers]="[school]" [height]="400" [showSettingsButton]="false"></app-map>
   </div>
   <div class="col-lg-6">
     <app-chart
@@ -133,9 +132,7 @@
   </div>
 </div>
 
-<h1 class="display-4">Ostatné prihlášky</h1>
-<hr>
-
+<h2 id="other-admissions" padding>Všetky prihlášky tohto uchádzača</h2>
 
 <table mat-table matSort [dataSource]="otherAdmissions" full-width>
   <ng-container matColumnDef="id">
@@ -156,6 +153,23 @@
   <ng-container matColumnDef="E_mail">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
     <td mat-cell *matCellDef="let element"> {{element.E_mail}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="OBDOBIE">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Školský rok </th>
+    <td mat-cell *matCellDef="let element"> {{element.OBDOBIE}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Program">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Program </th>
+    <td mat-cell *matCellDef="let element"> {{element.Program}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="Rozh" stickyEnd>
+    <th mat-header-cell *matHeaderCellDef> Rozhodnutie o prijatí </th>
+    <td [ngStyle]="{ color: element.Rozh > 9 && element.Rozh < 20 ? 'green' : 'red' }" mat-cell *matCellDef="let element">
+      {{ isAccepted(element.Rozh) }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="created_at">
