--- a/bakalarka-frontend/src/app/pages/admissions/admissions.component.scss
+++ b/bakalarka-frontend/src/app/pages/admissions/admissions.component.scss
@@ -21,6 +21,20 @@ h2 {
   &__schoolDetail {
     width: 30%;
     background-color: #e9ecef;
+    position: relative;
+
+    &__closeButton {
+      cursor: pointer;
+      font-size: 20px;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+
+      &:hover {
+        transition: 0.3s;
+        color: #009688;
+      }
+    }
   }
 }
 
