--- a/bakalarka-frontend/src/app/plugins/map/map.component.html
+++ b/bakalarka-frontend/src/app/plugins/map/map.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="markers.length" class="map__wrapper">
+<div class="map__wrapper">
 
   <agm-map
     [ngStyle]="{ 'height.px': height }"
@@ -18,6 +18,7 @@
   </agm-map>
 
   <button
+    *ngIf="showSettingsButton"
     class="map__settingsBtn btn btn-outline-primary btn-lg"
     type="button"
     (click)="showSettings = !showSettings"
